# daterangepicker

./: db.sqlite3  manage.py  pyproject.toml
daterange_filter/: apps.py  forms.py  urls.py  views.py
daterangepicker/: asgi.py  settings.py  urls.py  wsgi.py
templates/: home.html
