[tool.poetry]
name = "daterangepicker"
version = "0.1.0"
description = ""
authors = ["wottan32 <mariotorreslagos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
django-daterange-filter = "^1.3.0"
fields = "^5.0.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
